opam-version: "1.2"
name: "logarion"
version: "0.1"
maintainer: "Stavros Polymenis <sp@orbitalfox.com>"
authors: "Stavros Polymenis <sp@orbitalfox.com>"
license: "EUPL"
build: [
  ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
]
depends: [
  "ocamlfind" {build}
  "oasis" {build}
  "toml"
  "uuidm"
  "omd"
  "opium"
  "batteries"
  "lens"
  "lwt"
  "ptime"
  "re"
  "fpath"
]