opam-version: "1.2"
name: "logarion"
version: "0.1"
maintainer: "Stavros Polymenis <sp@orbitalfox.com>"
authors: "Stavros Polymenis <sp@orbitalfox.com>"
license: "EUPL"
build: [
  ["jbuilder" "build" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder" {build}
  "toml"
  "uuidm"
  "omd"
  "opium"
  "batteries"
  "lwt"
  "ptime"
  "re"
  "fpath"
]